# ippr-shell

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ippr_shell/: aas2ea.py  aas2xmi.py  cli.py  gui.py  udt2aas.py
tests/: test_aas2xmi.py  test_udt2aas.py
